--- a/app.css
+++ b/app.css
@@ -2,14 +2,13 @@
   box-sizing: border-box;
   margin: 0 auto;
   padding: 0; 
-   background-color: #fff5ee;
-  
   
 }
 
 #wrapper {
     margin-left: 20px;
     margin-right: 20px;
+    background-color: #fff5ee; 
 }
 
 header {
@@ -17,20 +16,24 @@ header {
     background-color: #b0c4de;
     font-size: 1.5em;
     font-weight: bold;
-    padding: 20px;
+    padding: 10px;
     border-bottom: 1px solid grey;
     text-align: center;
+}
+
+.subheader{
+    font-style: italic;
+    font-weight: normal;
+    font-size: .6em;
 }
 
 .cast {
     text-align: center;
     background-color: white;
-
 }
 
 .advert {
-    background-color: transparent;
-    margin-bottom: 50px;
+    margin-bottom: 5px;
     width: 100%;
     height: 100px;
     text-align: center;
@@ -38,11 +41,12 @@ header {
 }
 
 
-
 .advert2 {
     margin-top: 50px;
     width: 100%;
     height: 100px;
+    text-align: center;
+    clear: both;
 }
 
 .advert3 {
@@ -51,6 +55,7 @@ header {
     height: 100px;
     margin-bottom: 20px;
     text-align: center;
+    clear: both;
 }
 
 .columns {
@@ -186,10 +191,6 @@ footer {
     margin-top: 100px;
     margin-bottom: 20px;
 }
-
-
-
-
 
 
 
